Fix bug with navigation bar position being too far to the right and not centered

--- a/styles/style.css
+++ b/styles/style.css
@@ -60,7 +60,6 @@ li {
 }
 
 nav {
-    width: 100%;
     border-radius: 2em;
     border: solid #31304D 0.25em;
     background-color: #31304D;
